# r1cs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: continuous-integration-workflow.yml
benches/: multiplicative_inverse.rs  nth_root.rs
src/: bimap_util.rs  binary_arithmetic.rs  binops.rs  bits.rs  bitwise_operations.rs  boolean_algebra.rs  comparisons.rs  constraint.rs  curve.rs  curves.rs  davies_meyer.rs  embedded_curve.rs  expression.rs  field.rs  field_arithmetic.rs  field_element.rs  gadget.rs  gadget_builder.rs  gadget_builder_arithmetic.rs  gadget_builder_binary.rs  gadget_builder_binary_arithmetic.rs  gadget_builder_bitwise.rs  gadget_builder_boolean.rs  gadget_builder_compare.rs  gadget_builder_davies_meyer.rs  gadget_builder_merkle_damgard.rs  gadget_builder_mimc.rs  gadget_builder_permutation.rs  gadget_builder_random_access.rs  gadget_builder_sort.rs  gadget_builder_split.rs  gadget_traits.rs  group.rs  jubjub.rs  lcg.rs  lib.rs  linear_combination.rs  matrices.rs  merkle_damgard.rs  merkle_trees.rs  (+19 more)
src/curves/: edwards.rs  jubjub.rs  mod.rs  montgomery.rs  weierstrass.rs
src/gadgets/: inverse.rs  merkle.rs  merkle_damgard.rs  merkle_proofs.rs  merkle_trees.rs  mimc.rs  mod.rs  sort.rs  split.rs  trie.rs
src/mir/: block.rs  mod.rs  record.rs  transaction.rs  trie.rs
