[package]
name = "r1cs"
description = "A library for building R1CS gadgets"
version = "0.3.10"
authors = ["Daniel Lubarov <daniel@mirprotocol.org>", "Brendan Farmer <brendan@mirprotocol.org>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/r1cs"
documentation = "https://docs.rs/r1cs"
keywords = ["R1CS", "cryptography", "SNARK"]
categories = ["cryptography"]
maintenance = { status = "actively-developed" }
edition = "2018"

[dev-dependencies]
criterion = "0.2"

[dependencies]
bimap = "0.4.0"
itertools = "0.8.0"
num = "0.2.0"
num-traits = "0.2.8"

[[bench]]
name = "nth_roots"
harness = false
