[package]
name = "r1cs"
description = "A library for building R1CS gadgets"
version = "0.3.10"
authors = ["Daniel Lubarov <daniel@mirprotocol.org>", "Brendan Farmer <brendan@mirprotocol.org>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/r1cs"
documentation = "https://docs.rs/r1cs"
keywords = ["R1CS", "cryptography", "SNARK"]
categories = ["cryptography"]
maintenance = { status = "actively-developed" }
edition = "2018"

[features]
default = ["bimap", "itertools", "num", "num-traits"]
no-std = []
[dev-dependencies]
criterion = "0.2"

[dependencies]
bimap = { version = "0.4.0", optional = true }
itertools = { version = "0.8.0", optional = true }
num = { version = "0.2.0", features = ["rand"], optional = true }
num-traits = { version = "0.2.8", optional = true }

[[bench]]
name = "nth_root"
harness = false

[[bench]]
name = "multiplicative_inverse"
harness = false