[package]
name = "r1cs"
description = "A library for building R1CS gadgets"
version = "0.4.7"
authors = ["Daniel Lubarov <daniel@mirprotocol.org>", "Brendan Farmer <brendan@mirprotocol.org>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/r1cs"
documentation = "https://docs.rs/r1cs"
keywords = ["R1CS", "cryptography", "SNARK"]
categories = ["cryptography", "no-std"]
maintenance = { status = "actively-developed" }
edition = "2018"

[features]
default = ["std"]
std = ["num/std", "num-traits/std", "itertools/use_std", "bimap/std"]

[dev-dependencies]
criterion = "0.2"

[dependencies]
bimap = { version = "0.4.0" }
itertools = { version = "0.8.0" }
num = { version = "0.4.0", features = ["rand"] }
num-traits = { version = "0.2.14" }

[[bench]]
name = "nth_root"
harness = false

[[bench]]
name = "multiplicative_inverse"
harness = false
